--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gatsby-starter-blog",
   "version": "1.0.0",
-  "private": true,
   "description": "gatsby-starter-blog",
   "author": "saseungmin",
+  "license": "MIT",
   "keywords": [
     "gatsby"
   ],
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -36,5 +37,13 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "babel-jest": "^27.2.5",
+    "babel-preset-gatsby": "^1.14.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.5"
   }
 }
